# robotTesting

./: .gitignore  README.md  animate_robot.py  frames_2025-03-21_00.22.10.gv  frames_2025-03-21_22.04.42.gv  frames_2025-03-22_15.50.14.gv  frames_2025-03-22_20.33.41.gv  move_robot.sh  package.xml.sim
src/my_robot_description/: CMakeLists.txt  README.md  package.xml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: maze_config.rviz  slam_config.rviz  urdf_config.rviz
src/my_robot_description/urdf/: my_robot.gazebo  my_robot.urdf  my_robot.urdf.xacro
src/my_robot_simulation/: CMakeLists.txt  package.xml
src/my_robot_simulation/launch/: gazebo_simulation.launch.py  teleop.launch.py
src/my_robot_simulation/worlds/: firefighter_test.world
src/my_robot_slam/: CMakeLists.txt  README.md  package.xml  setup.py
src/my_robot_slam/config/: advanced_lidar_view.rviz  mapper_params_online_sync.yaml  maze_config.rviz  slam_toolbox_params.yaml
src/my_robot_slam/launch/: complete_sim.launch.py  hardware_teleop.launch.py  mapping.launch.py  marker_test.launch.py  maze_sim.launch.py  navigation.launch.py  obstacle_test.launch.py  round1_real.launch.py  round1_sim.launch.py  round1_teleop.launch.py  save_map.launch.py  slam_mapping.launch.py  slam_only.launch.py  slam_with_rviz.launch.py  terrain_sim.launch.py
src/my_robot_slam/my_robot_slam/: obstacle_publisher.py
src/my_robot_slam/scripts/: animate_robot.py  data_collector.py  hardware_teleop_controller.py  lidar_debug.py  lidar_monitor.py  lidar_simulator.py  obstacle_publisher.py  round1_controller.py  round1_realController.py  teleop_to_joints.py  wall_detector_debug.py
