<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_slam</name>
  <version>0.0.1</version>
  <description>SLAM and navigation package for the firefighter robot</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_robot_simulation</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
